tests/esproposal_export_star_as.warn/esproposal_export_star_as.warn.exp
Error ------------------------------------------------------------- test.js:3:13

Experimental `export * as` usage. `export * as` is an active early stage feature
propsal that may change. You may opt-in to using it anyway by putting
`esproposal.export_star_as=enable` into the `[options]` section of your
`.flowconfig`.

Error: test.js:3
  3: export * as foo from "./test";
                 ^^^ Experimental `export * as` usage. `export * as` is an active early stage feature propsal that may change. You may opt-in to using it anyway by putting `esproposal.export_star_as=enable` into the `[options]` section of your `.flowconfig`.


Found 1 error
